# multiplayer-game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  building.md  building.txt  generateCmakeDependencyList.bat  imgui.ini  launch.vs.json  runClient.bat  runClientServer.bat  runCodegenTool.bat  runServer.bat  runServerAnd2Clients.bat  runShortcutTool.bat  tasks.vs.json
buildTool/: CMakeLists.txt  buildTool  main.cpp
client/: CMakeLists.txt  Camera.cpp  Camera.hpp  ClientGameplayContext.hpp  Debug.cpp  Debug.hpp  GameClient.cpp  GameClient.hpp  GameClientAdapter.cpp  GameClientAdapter.hpp  GameplayContext.cpp  LineTriangulate.cpp  LineTriangulator.cpp  LineTriangulator.hpp  MainLoop.cpp  MainLoop.hpp  PtVertex.hpp  Renderer.cpp  Renderer.hpp  TextRenderer.cpp  TextRenderer.hpp  background.frag  background.vert  client  debugging_networking.txt  line_rendering.txt  main.cpp  netcode_ideas.txt  quadShader.vert  shader.frag  shader.vert  smoothly_accelerating_and_decelerating.txt  synchronization.txt
client/Engine/: Engine.cpp  Engine.hpp  Window.cpp  Window.hpp
client/Engine/Graphics/: IndexBuffer.cpp  IndexBuffer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  TextureAtlasGenerator.cpp  TextureAtlasGenerator.hpp
client/Engine/Input/: Input.cpp  Input.hpp  KeyCode.hpp
client/Game/: Camera.cpp  Camera.hpp  GameClient.cpp  GameClient.hpp  GameClientAdapter.cpp  MainLoop.cpp  MainLoop.hpp  Renderer.cpp  Renderer.hpp  Test.data  Test2.data  background.vert  deathAnimationShader.frag  font.vert  latency_hiding_projectiles.txt  shader.frag  shader.vert  smoothly_accelerating_and_decelerating.txt
client/Json/: JsonValue.cpp  JsonValue.hpp
client/Log/: Log.cpp
client/Rendering/: Font.cpp  Font.data  Font.hpp  LineTriangulate.cpp  LineTriangulate.hpp  Renderer.cpp  Renderer.hpp  ShaderManager.cpp  ShaderManager.hpp  Text.cpp  Text.hpp  line_rendering.txt  shaderSystem.txt
client/Rendering/Shaders/: bullet.data  bullet.frag  bullet.vert  circle.frag  circle.vert  cooldownTimer.data  cooldownTimer.frag  cooldownTimer.vert  deathAnimation.frag  deathAnimation.vert  hollowCircle.data  line.data  line.frag  line.vert  map.data  map.frag  map.vert  mapPlayerMaker.data  mapPlayerMarker.frag  mapPlayerMarker.vert  player.data  player.frag  player.vert  spaceBackground.data  spaceBackground.frag  spaceBackground.vert  text.data  text.frag  text.vert  trail.vert  transitionScreen.data  transitionScreen.frag  transitionScreen.vert
client/Rendering/Shaders/Postprocess/: bloom.data  bloom.frag  postprocess.vert
client/Rendering/Shaders/Utils/: blend.glsl  colorConversion.glsl  noise.glsl  sdf.glsl
client/Shaders/: circle.data  circle.frag  circle.vert  deathAnimation.data  deathAnimation.frag  deathAnimation.vert  line.frag  line.vert  text.frag
client/Utils/: FileIo.hpp  Span.hpp
codeGenTool/: cmakeIntegration.txt  targetAddGenerated.cmake
codeGenTool/src/: CmakeGenerator.java  Config.java  DataFile.java  FormatUtils.java  Lexer.java  Main.java  Parser.java  Watcher.java  dataFileCpp.stg  dataFileHpp.stg  shader.stg  shared.stg  test.data  the_problem_with_parser_generators.txt  todo.txt
dependencies/: addYojimbo.cmake  building_freetype.txt  freetype.lib
dependencies/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
dependencies/stb_image/: stb_image_resize.cpp  stb_image_write.cpp
dependencies/yojimboLib/: CMakeLists.txt
embedTool/: CMakeLists.txt  embedTool  main.cpp
engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  Window.cpp  Window.hpp
engine/Graphics/: CubeMap.cpp  CubeMap.hpp  Fbo.cpp  Fbo.hpp  Ibo.cpp  Ibo.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  TextureArray.cpp  TextureAtlasGenerator.cpp  TextureAtlasGenerator.hpp  Vao.cpp  Vao.hpp  Vbo.cpp  Vbo.hpp  bind.txt
engine/Input/: Input.cpp  Input.hpp  KeyCode.hpp  MouseButton.hpp
engine/Json/: CMakeLists.txt  JsonParser.cpp  JsonPrinter.cpp  JsonValue.hpp
engine/Log/: Log.cpp  Log.hpp
engine/Math/: Aabb.cpp  Aabb.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Line.cpp  Line.hpp  LineSegment.cpp  LineSegment.hpp  Mat2.hpp  Mat3x2.hpp  Polygon.cpp  Polygon.hpp  Random.cpp  Random.hpp  Transform.cpp  Transform.hpp  Triangle.cpp  Triangle.hpp  Triangulate.cpp  Triangulate.hpp  Utils.cpp  Utils.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
engine/Utils/: Assertions.cpp  Assertions.hpp  ByteBuffer.hpp  Color32.cpp  CrashReport.cpp  CrashReport.hpp  DebugBreak.hpp  FileIo.cpp  FileIo.hpp  Gui.cpp  Gui.hpp  Image32.cpp  Image32.hpp  Iter2d.hpp  Json.cpp  Json.hpp  MapOptGet.hpp  Mutex.hpp  PreprocessIncludes.cpp  PreprocessIncludes.hpp  Put.cpp  Put.hpp  StringStream.cpp  StringStream.hpp  Timer.cpp  Types.hpp  Unwrap.hpp  Utf8.cpp  Utf8.hpp
replayTool/: CMakeLists.txt  DebugDraw.cpp  DebugDraw.hpp  Init.cpp  Init.hpp  main.cpp
server/: CMakeLists.txt  DebugSettings.hpp  GameServer.cpp  GameServer.hpp  GameServerAdapter.cpp  GameServerAdapter.hpp  GetAddress.cpp  GetAddress.hpp  ServerGameplayContext.cpp  ServerGameplayContext.hpp  Sockets.cpp  Sockets.hpp  main.cpp  server  synchronizing_spawning_and_destroying.txt
server/HttpServer/: HttpServer.cpp  HttpServer.hpp  Requests.data
shared/: A.data  BulletIndex.hpp  DebugNetworkConfig.hpp  DebugSettings.hpp  DebugWindowInfo.hpp  Gameplay.cpp  Gameplay.hpp  GameplayContext.hpp  GameplayState.data  Messages.data  NetworkSerialize.hpp  Networking.cpp  Networking.hpp  PlayerIndex.cpp  PlayerIndex.hpp  Replay.data  ReplayRecorder.cpp  ReplayRecorder.hpp  Time.hpp  WindowsUtils.cpp  WindowsUtils.hpp  despawning_bullets.txt  network_serialization.txt  replay_debugger.txt  secure_connections.txt  storing_time.txt
shared/Json/: JsonValue.cpp
shared/Math/: Color.hpp  Vec4.hpp  aabb.cpp  aabb.hpp  mat3x2.hpp  utils.hpp  vec2.hpp  vec3.hpp
shared/Utils/: Gui.hpp  Image32.cpp  Image32.hpp  Json.hpp  (+1 more)
shortcutTool/: CMakeLists.txt  main.cpp
(+2 files in other folders)
